project name changed

--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -145,4 +145,4 @@
   </form>
 
 </ion-content>
-<!-- <phone-ringer #phoneRinger></phone-ringer> -->
+<app-phone-ringer #phoneRinger></app-phone-ringer>
