--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
 	            <ion-icon name="paper" slot="start"></ion-icon>
 	            <ion-label>Register</ion-label>
 	        </ion-item>
-	        <ion-item button >
+	        <ion-item button routerLink="/settings">
 	            <ion-icon name="settings" slot="start"></ion-icon>
 	            <ion-label>Settings</ion-label>
 	        </ion-item>
@@ -55,7 +55,7 @@
 	            <ion-label>Meetings</ion-label>
 	        </ion-item>
 
-	        <ion-item button >
+	        <ion-item button routerLink="/company-search">
 	            <ion-icon name="search" slot="start"></ion-icon>
 	            <ion-label>Search Companies</ion-label>
 	        </ion-item>
@@ -72,4 +72,4 @@
 	</ion-menu>
 	<ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
-<app-phone-ringer #phoneRinger></app-phone-ringer>
+<!-- <app-phone-ringer #phoneRinger></app-phone-ringer> -->
