--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
 	            <ion-label>Contacts</ion-label>
 	        </ion-item>
 	        <ion-item button routerLink="/register" *ngIf="!isMember" >
-	            <ion-icon name="paper" slot="start"></ion-icon>
+	            <ion-icon name="person-add" slot="start"></ion-icon>
 	            <ion-label>Register</ion-label>
 	        </ion-item>
 	        <ion-item button routerLink="/settings">
