--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
 	            <ion-icon name="person" slot="start"></ion-icon>
 	            <ion-label>Account</ion-label>
 	        </ion-item>
-	        <ion-item button *ngIf="isMember" >
+	        <ion-item button routerLink="/block-list" *ngIf="isMember" >
 	            <ion-icon name="remove-circle" slot="start"></ion-icon>
 	            <ion-label>Blocked List</ion-label>
 	        </ion-item>
