contacts page added but not sure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
 	            <ion-icon name="remove-circle" slot="start"></ion-icon>
 	            <ion-label>Blocked List</ion-label>
 	        </ion-item>
-	        <ion-item button *ngIf="isMember" >
+	        <ion-item button routerLink="/contacts" *ngIf="isMember" >
 	            <ion-icon name="book" slot="start"></ion-icon>
 	            <ion-label>Contacts</ion-label>
 	        </ion-item>
