--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,7 +42,7 @@
 	            <ion-icon name="settings" slot="start"></ion-icon>
 	            <ion-label>Settings</ion-label>
 	        </ion-item>
-	        <ion-item button >
+	        <ion-item button routerLink="/netcast-dashboard">
 	            <ion-icon name="wifi" slot="start"></ion-icon>
 	            <ion-label>Netcast</ion-label>
 	        </ion-item>
