--- a/src/app/components/create-netcast-modal/create-netcast-modal.component.html
+++ b/src/app/components/create-netcast-modal/create-netcast-modal.component.html
@@ -1,16 +1,16 @@
 <ion-header>
-	<ion-navbar hideBackButton="true">
+	<ion-toolbar>
 		<ion-title>
             Create A Netcast
         </ion-title>
-		<ion-buttons end>
-            <button (click)="cancel()" ion-button icon-only>
+		<ion-buttons slot="end">
+            <ion-button (click)="cancel()">
                 <ion-icon name="close-circle"></ion-icon>
-            </button>
+            </ion-button>
 		</ion-buttons>
-	</ion-navbar>
+	</ion-toolbar>
 </ion-header>
-<ion-content padding>
+<ion-content class="ion-padding">
 	
 	<form [formGroup]="formGroup">
         <ion-grid>
@@ -19,80 +19,76 @@
                     <ion-list>
 
                         <ion-item>
-                            <ion-label stacked>Title</ion-label>
+                            <ion-label position="stacked">Title</ion-label>
                             <ion-input type="text" formControlName="title"></ion-input>
                         </ion-item>
-                        <ion-item text-wrap *ngIf="!formGroup.controls.title.valid && formGroup.controls.title.dirty">
-                            <show-form-errors [control]="formGroup.controls.title"></show-form-errors>
+                        <ion-item class="ion-text-wrap" *ngIf="!formGroup.controls.title.valid && formGroup.controls.title.dirty">
+                            <app-show-form-errors [control]="formGroup.controls.title"></app-show-form-errors>
                         </ion-item>
                         <ion-item>
-                            <ion-label stacked>Description</ion-label>
+                            <ion-label position="stacked">Description</ion-label>
                             <ion-textarea formControlName="description" rows="3"></ion-textarea>
                         </ion-item>
                         <ion-item *ngIf="!formGroup.controls.description.valid && formGroup.controls.description.dirty">
-                            <show-form-errors [control]="formGroup.get('description')"></show-form-errors>
+                            <app-show-form-errors [control]="formGroup.get('description')"></app-show-form-errors>
                         </ion-item>
                         <ion-item>
-                            <ion-label stacked>Select a Genre: </ion-label>
+                            <ion-label position="stacked">Select a Genre: </ion-label>
                             <ion-select formControlName="netcastGenreId">
-                                <ion-option *ngFor="let genre of genres" value="{{genre.value}}">{{genre.key}}</ion-option>
+                                <ion-select-option *ngFor="let genre of genres" value="{{genre.value}}">{{genre.key}}</ion-select-option>
                             </ion-select>
                         </ion-item>
                         <ion-item *ngIf="!formGroup.controls.netcastGenreId.valid && formGroup.controls.netcastGenreId.dirty">
-                            <show-form-errors [control]="formGroup.get('netcastGenreId')"></show-form-errors>
+                            <app-show-form-errors [control]="formGroup.get('netcastGenreId')"></app-show-form-errors>
                         </ion-item>
                         <ion-item>
-                            <ion-label stacked>Tags</ion-label>
+                            <ion-label position="stacked">Tags</ion-label>
                             <ion-input type="text" formControlName="tags"></ion-input>
                         </ion-item>
                         <ion-item *ngIf="!formGroup.controls.tags.valid && formGroup.controls.tags.dirty">
-                            <show-form-errors [control]="formGroup.get('tags')"></show-form-errors>
+                            <app-show-form-errors [control]="formGroup.get('tags')"></app-show-form-errors>
                         </ion-item>
                       
 
                         <ion-item>
-                            <ion-label stacked>Scheduled Date &amp; Time</ion-label>
+                            <ion-label position="stacked">Scheduled Date &amp; Time</ion-label>
                             <ion-datetime displayFormat="MMM DD, YYYY h:mm A" formControlName="netcastTime"></ion-datetime>
                         </ion-item>
                         <ion-item *ngIf="!formGroup.controls.netcastTime.valid && formGroup.controls.netcastTime.dirty">
-                            <show-form-errors [control]="formGroup.get('netcastTime')"></show-form-errors>
+                            <app-show-form-errors [control]="formGroup.get('netcastTime')"></app-show-form-errors>
                         </ion-item>
                       
-
-
-
-                        <ion-item text-wrap>
-                            <ion-label stacked>Password: </ion-label>
+                        <ion-item class="ion-text-wrap">
+                            <ion-label position="stacked">Password: </ion-label>
                             <ion-input type="text" formControlName="password"></ion-input>
-                            <button ion-button clear icon-only style="padding-top: 8px;" color="primary" type="button" item-right
+                            <ion-button fill="clear" style="padding-top: 8px;" color="primary" type="button" slot="end"
                                     (click)="popup('Optional Password', 'Create a password if you would like your viewers to enter the password before viewing your netcast.')">
                                 <ion-icon name="information-circle"> </ion-icon>
-                            </button>
+                            </ion-button>
 
                         </ion-item>
                         <ion-item *ngIf="!formGroup.controls.password.valid && formGroup.controls.password.dirty">
-                            <show-form-errors [control]="formGroup.get('password')"></show-form-errors>
+                            <app-show-form-errors [control]="formGroup.get('password')"></app-show-form-errors>
                         </ion-item>
 
 
                         <ion-row class="bg-white">
-                            <ion-col col-12>
+                            <ion-col size="12">
                                 <ion-label>Preview Image: </ion-label>
                             </ion-col>
                         </ion-row>
                         <ion-row class="bg-white">
-                            <ion-col col-3>
-                                <pic-preview (onAvatarChanged)="onAvatarChanged($event)"></pic-preview>
+                            <ion-col size="8">
+                                <app-pic-preview (onAvatarChanged)="onAvatarChanged($event)"></app-pic-preview>
                             </ion-col>
-                            <ion-col col-9 class="text-right">
-                                <button *ngIf="showRemoveImage" ion-button clear icon-only style="position:relative; top:8px; right:-10px;" color="primary" type="button"
+                            <ion-col size="4" class="text-right">
+                                <ion-button *ngIf="showRemoveImage" style="position:relative; top:8px; right:-10px;" color="primary" type="button"
                                         (click)="removeAvatar()">
-                                    <ion-icon name="trash"> </ion-icon>
-                                </button>
-                                <button ion-button clear icon-only style="position:relative; top:8px; right:-10px;" color="primary" type="button"
-                                        (click)="popup('Preview Image', 'Add an image so viewers can get a preview of your Netcast.')">
+                                    <ion-icon name="trash"></ion-icon>
+                                </ion-button>
+                                <ion-button color="primary" fill="clear" type="button" (click)="popup('Preview Image', 'Add an image so viewers can get a preview of your Netcast.')">
                                     <ion-icon name="information-circle"> </ion-icon>
-                                </button>
+                                </ion-button>
                             </ion-col>
                         </ion-row>
                         <ion-row class="bg-white">
@@ -104,30 +100,17 @@
 
                         <ion-row class="bg-white">
                             <ion-col class="text-center">
-
-                                
-                                <button (click)="cancel()" ion-button color="danger">Cancel</button>
+                                <ion-button (click)="cancel()" expand="block" color="danger">Cancel</ion-button>
                             </ion-col>
                             <ion-col class="text-center">
-                                <button (click)="submit()" ion-button color="brand-orange">Create</button>
+                                <ion-button (click)="submit()" expand="block" color="primary">Create</ion-button>
                             </ion-col>
                         </ion-row>
-                       
-
                     </ion-list>
 
                 </ion-col>
-            </ion-row>
-
-
-
-          
-
-          
-        </ion-grid>
-
-		
+            </ion-row>       
+        </ion-grid>		
 	</form>
-	
 </ion-content>
-<phone-ringer #phoneRinger></phone-ringer>
+<app-phone-ringer #phoneRinger></app-phone-ringer>
