--- a/src/app/components/edit-netcast-modal/edit-netcast-modal.component.html
+++ b/src/app/components/edit-netcast-modal/edit-netcast-modal.component.html
@@ -1,88 +1,88 @@
 <ion-header>
-	<ion-navbar hideBackButton="true">
+	<ion-toolbar>
 		<ion-title>
             Edit Netcast
         </ion-title>
-		<ion-buttons end>
-            <button (click)="cancel()" ion-button icon-only>
+		<ion-buttons slot="end">
+            <ion-button (click)="cancel()">
                 <ion-icon name="close-circle"></ion-icon>
-            </button>
+            </ion-button>
 		</ion-buttons>
-	</ion-navbar>
+	</ion-toolbar>
 </ion-header>
-<ion-content padding>
+<ion-content class="ion-padding">
     <form [formGroup]="formGroup">
         <ion-grid>
             <ion-row>
                 <ion-col>
                     <ion-list>
-                        <ion-item text-wrap>
-                            <ion-label stacked>Title</ion-label>
+                        <ion-item class="ion-text-wrap">
+                            <ion-label position="stacked">Title</ion-label>
                             <ion-input type="text" formControlName="title"></ion-input>
                         </ion-item>
-                        <ion-item text-wrap *ngIf="!formGroup.controls.title.valid && formGroup.controls.title.dirty">
-                            <show-form-errors [control]="formGroup.controls.title"></show-form-errors>
+                        <ion-item class="ion-text-wrap" *ngIf="!formGroup.controls.title.valid && formGroup.controls.title.dirty">
+                            <app-show-form-errors [control]="formGroup.controls.title"></app-show-form-errors>
                         </ion-item>
-                        <ion-item text-wrap>
-                            <ion-label stacked>Description</ion-label>
+                        <ion-item class="ion-text-wrap">
+                            <ion-label position="stacked">Description</ion-label>
                             <ion-textarea formControlName="description" rows="3"></ion-textarea>
                         </ion-item>
-                        <ion-item text-wrap *ngIf="!formGroup.controls.description.valid && formGroup.controls.description.dirty">
-                            <show-form-errors [control]="formGroup.get('description')"></show-form-errors>
+                        <ion-item class="ion-text-wrap" *ngIf="!formGroup.controls.description.valid && formGroup.controls.description.dirty">
+                            <app-show-form-errors [control]="formGroup.get('description')"></app-show-form-errors>
                         </ion-item>
                         <ion-item>
                             <ion-label floating>Select a Genre: </ion-label>
                             <ion-select formControlName="netcastGenreId">
-                                <ion-option *ngFor="let genre of genres" value="{{genre.value}}">{{genre.key}}</ion-option>
+                                <ion-select-option *ngFor="let genre of genres" value="{{genre.value}}">{{genre.key}}</ion-select-option>
                             </ion-select>
                         </ion-item>
                         <ion-item *ngIf="!formGroup.controls.netcastGenreId.valid && formGroup.controls.netcastGenreId.dirty">
-                            <show-form-errors [control]="formGroup.get('netcastGenreId')"></show-form-errors>
+                            <app-show-form-errors [control]="formGroup.get('netcastGenreId')"></app-show-form-errors>
                         </ion-item>
-                        <ion-item text-wrap>
-                            <ion-label stacked>Tags</ion-label>
+                        <ion-item class="ion-text-wrap">
+                            <ion-label position="stacked">Tags</ion-label>
                             <ion-textarea formControlName="tags"></ion-textarea>
                         </ion-item>
-                        <ion-item text-wrap *ngIf="!formGroup.controls.tags.valid && formGroup.controls.tags.dirty">
-                            <show-form-errors [control]="formGroup.get('tags')"></show-form-errors>
+                        <ion-item class="ion-text-wrap" *ngIf="!formGroup.controls.tags.valid && formGroup.controls.tags.dirty">
+                            <app-show-form-errors [control]="formGroup.get('tags')"></app-show-form-errors>
                         </ion-item>
                         <ion-item>
-                            <ion-label stacked>Scheduled Date &amp; Time</ion-label>
+                            <ion-label position="stacked">Scheduled Date &amp; Time</ion-label>
                             <ion-datetime displayFormat="MMM DD, YYYY h:mm A" formControlName="netcastTime"></ion-datetime>
                         </ion-item>
                         <ion-item *ngIf="!formGroup.controls.netcastTime.valid && formGroup.controls.netcastTime.dirty">
-                            <show-form-errors [control]="formGroup.get('netcastTime')"></show-form-errors>
+                            <app-show-form-errors [control]="formGroup.get('netcastTime')"></app-show-form-errors>
                         </ion-item>
-                        <ion-item text-wrap>
-                            <ion-label stacked>Password: </ion-label>
+                        <ion-item class="ion-text-wrap">
+                            <ion-label position="stacked">Password: </ion-label>
                             <ion-input type="text" formControlName="password"></ion-input>
-                            <button ion-button clear icon-only style="padding-top: 8px;" color="primary" type="button" item-right
+                            <ion-button fill="clear" style="padding-top: 8px;" color="primary" type="button" slot="end"
                                     (click)="popup('Optional Password', 'Create a password if you would like your viewers to enter the password before viewing your netcast.')">
                                 <ion-icon name="information-circle"> </ion-icon>
-                            </button>
+                            </ion-button>
                         </ion-item>
                         <ion-item *ngIf="!formGroup.controls.password.valid && formGroup.controls.password.dirty">
-                            <show-form-errors [control]="formGroup.get('password')"></show-form-errors>
+                            <app-show-form-errors [control]="formGroup.get('password')"></app-show-form-errors>
                         </ion-item>
 
                         <ion-row class="bg-white">
-                            <ion-col col-12>
+                            <ion-col>
                                 <ion-label>Preview Image: </ion-label>
                             </ion-col>
                         </ion-row>
                         <ion-row class="bg-white">
-                            <ion-col col-3>
-                                <pic-preview [imageSource]="image" (onAvatarChanged)="onAvatarChanged($event)"></pic-preview>
+                            <ion-col size="8">
+                                <app-pic-preview [imageSource]="image" (onAvatarChanged)="onAvatarChanged($event)"></app-pic-preview>
                             </ion-col>
-                            <ion-col col-9 class="text-right">
-                                <button *ngIf="showRemoveImage" ion-button clear icon-only style="position:relative; top:8px; right:-10px;" color="primary" type="button"
+                            <ion-col size="4" class="text-right">
+                                <ion-button *ngIf="showRemoveImage" style="position:relative; top:8px; right:-10px;" color="primary" type="button"
                                         (click)="removeAvatar()">
                                     <ion-icon name="trash"> </ion-icon>
-                                </button>
-                                <button ion-button clear icon-only style="position:relative; top:8px; right:-10px;" color="primary" type="button"
+                                </ion-button>
+                                <ion-button fill="clear" style="position:relative; top:8px; right:-10px;" color="primary" type="button"
                                         (click)="popup('Preview Image', 'Add an image so viewers can get a preview of your Netcast.')">
                                     <ion-icon name="information-circle"> </ion-icon>
-                                </button>
+                                </ion-button>
                             </ion-col>
                         </ion-row>
                         <ion-row class="bg-white">
@@ -92,10 +92,10 @@
                         </ion-row>
                         <ion-row class="bg-white">
                             <ion-col class="text-center">
-                                <button (click)="cancel()" ion-button color="danger">Cancel</button>
+                                <ion-button expand="block" (click)="cancel()" color="light">Cancel</ion-button>
                             </ion-col>
                             <ion-col class="text-center">
-                                <button (click)="submit()" ion-button color="brand-orange">Update Netcast</button>
+                                <ion-button expand="block" (click)="submit()" color="primary">Update Netcast</ion-button>
                             </ion-col>
                         </ion-row>
                     </ion-list>
@@ -113,7 +113,7 @@
           
 
            
-            <!--<ion-item text-wrap>
+            <!--<ion-item class="ion-text-wrap">
                 <strong> Current Scheduled Date And Time: {{viewModel.startDateTime}}</strong>
                 <p>
                     If you wish to change the scheduled date and time for your netcast,
@@ -129,7 +129,7 @@
             <!--<ion-row *ngIf="showNewDateTime">
                 <ion-item col-10>
 
-                    <ion-label stacked>
+                    <ion-label position="stacked">
                         Choose New Start Date:
                     </ion-label>
                     <ion-input type="text" formControlName="netcastDate"></ion-input>
@@ -140,52 +140,52 @@
                 </ion-item>
             </ion-row>
             <ion-item *ngIf="!formGroup.controls.netcastDate.valid && formGroup.controls.netcastDate.dirty && showNewDateTime">
-                <show-form-errors [control]="formGroup.get('netcastDate')"></show-form-errors>
+                <app-show-form-errors [control]="formGroup.get('netcastDate')"></app-show-form-errors>
             </ion-item>
 
-            <ion-item text-wrap *ngIf="showNewDateTime">
-                <ion-label stacked>Enter New Start Hour</ion-label>
+            <ion-item class="ion-text-wrap" *ngIf="showNewDateTime">
+                <ion-label position="stacked">Enter New Start Hour</ion-label>
                 <ion-input type="text" formControlName="netcastHour"></ion-input>
             </ion-item>
-            <ion-item text-wrap *ngIf="!formGroup.controls.netcastHour.valid && formGroup.controls.netcastHour.dirty && showNewDateTime">
-                <show-form-errors [control]="formGroup.get('netcastHour')"></show-form-errors>
+            <ion-item class="ion-text-wrap" *ngIf="!formGroup.controls.netcastHour.valid && formGroup.controls.netcastHour.dirty && showNewDateTime">
+                <app-show-form-errors [control]="formGroup.get('netcastHour')"></app-show-form-errors>
             </ion-item>
 
-            <ion-item text-wrap *ngIf="showNewDateTime">
-                <ion-label stacked>Enter New Start Minute</ion-label>
+            <ion-item class="ion-text-wrap" *ngIf="showNewDateTime">
+                <ion-label position="stacked">Enter New Start Minute</ion-label>
                 <ion-input type="text" formControlName="netcastMinute"></ion-input>
             </ion-item>
-            <ion-item text-wrap *ngIf="!formGroup.controls.netcastMinute.valid && formGroup.controls.netcastMinute.dirty && showNewDateTime">
-                <show-form-errors [control]="formGroup.get('netcastMinute')"></show-form-errors>
+            <ion-item class="ion-text-wrap" *ngIf="!formGroup.controls.netcastMinute.valid && formGroup.controls.netcastMinute.dirty && showNewDateTime">
+                <app-show-form-errors [control]="formGroup.get('netcastMinute')"></app-show-form-errors>
             </ion-item>
 
-            <ion-item text-wrap *ngIf="showNewDateTime">
-                <ion-label stacked>AM/PM</ion-label>
+            <ion-item class="ion-text-wrap" *ngIf="showNewDateTime">
+                <ion-label position="stacked">AM/PM</ion-label>
                 <ion-toggle formControlName="isPm"></ion-toggle>
             </ion-item>
-            <ion-item text-wrap *ngIf="!formGroup.controls.isPm.valid && formGroup.controls.isPm.dirty && showNewDateTime">
-                <show-form-errors [control]="formGroup.get('isPm')"></show-form-errors>
+            <ion-item class="ion-text-wrap" *ngIf="!formGroup.controls.isPm.valid && formGroup.controls.isPm.dirty && showNewDateTime">
+                <app-show-form-errors [control]="formGroup.get('isPm')"></app-show-form-errors>
             </ion-item>-->
 
 
 
-            <!--<ion-item text-wrap>
-                <ion-label stacked>Privacy</ion-label>
+            <!--<ion-item class="ion-text-wrap">
+                <ion-label position="stacked">Privacy</ion-label>
                 <ion-toggle formControlName="isPrivate" [(ngModel)]="isPrivate">Is Private</ion-toggle>
             </ion-item>
-            <ion-item text-wrap *ngIf="isPrivate">
-                <ion-label stacked>Password</ion-label>
+            <ion-item class="ion-text-wrap" *ngIf="isPrivate">
+                <ion-label position="stacked">Password</ion-label>
                 <ion-input type="text" formControlName="password"></ion-input>
 
             </ion-item>
-            <ion-item text-wrap *ngIf="isPrivate">
+            <ion-item class="ion-text-wrap" *ngIf="isPrivate">
                 <small>
                     A password is required when a netcast is set to private.
                     Only create a new password to change an existing password, or you currently don't have a password.
                 </small>
             </ion-item>
-            <ion-item text-wrap *ngIf="!formGroup.controls.password.valid && formGroup.controls.password.dirty && isPrivate">
-                <show-form-errors [control]="formGroup.get('password')"></show-form-errors>
+            <ion-item class="ion-text-wrap" *ngIf="!formGroup.controls.password.valid && formGroup.controls.password.dirty && isPrivate">
+                <app-show-form-errors [control]="formGroup.get('password')"></app-show-form-errors>
             </ion-item>-->
 
        
@@ -194,4 +194,4 @@
    
 	
 </ion-content>
-<phone-ringer #phoneRinger></phone-ringer>
+<app-phone-ringer #phoneRinger></app-phone-ringer>
