--- a/src/app/components/edit-netcast-modal/edit-netcast-modal.component.scss
+++ b/src/app/components/edit-netcast-modal/edit-netcast-modal.component.scss
@@ -1,15 +1,18 @@
 @import '../../../assets/_variables.scss';
 @import '../../../assets/_mixins.scss';
 
-edit-netcast-modal {
-    ion-list {
-        @include borderRadius($radiusLg);
-        border: 1px solid $primary;
-        overflow: hidden;
-    }
 
-    .bg-white {
-        padding: 0 10px;
-        background-color: $white;
-    }
+ion-list {
+    @include borderRadius($radiusLg);
+    border: 1px solid $primary;
+    overflow: hidden;
 }
+
+.bg-white {
+    padding: 0 10px;
+    background-color: $white;
+}
+.text-right {
+    text-align: right;
+}
+
