--- a/src/app/components/pic-preview/pic-preview.component.html
+++ b/src/app/components/pic-preview/pic-preview.component.html
@@ -1,8 +1,7 @@
 <div class="text-center">
     <img src="../../../assets/images/default-avatar.png" *ngIf="!imageSource">
     <img [src]="imageSource" *ngIf="imageSource" />
-    <br />
-    <ion-button (click)="changeAvatarClick()" slot="end">
+    <ion-button (click)="changeAvatarClick()" slot="end" size="small">
         <ion-icon name="create"></ion-icon> Image
     </ion-button>
 </div>
