--- a/src/app/pages/netcast-dashboard/netcast-dashboard.page.html
+++ b/src/app/pages/netcast-dashboard/netcast-dashboard.page.html
@@ -11,7 +11,7 @@
 
 <ion-content class="ion-padding">
   <ion-grid>
-      <ion-row class="dashboard-buttons">
+      <ion-row>
           <ion-col size="6" *ngIf="isMember" class="text-center">
               <span><img src="assets/dashboardSettings.png" (click)="gotoNetcastListPage()" /></span>
               <br />
