--- a/src/app/pages/phone/phone.page.html
+++ b/src/app/pages/phone/phone.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar hideBackButton="true">
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button auto-hide="true" color="primary"></ion-menu-button>
     </ion-buttons>
@@ -11,7 +11,7 @@
               <ion-icon name="ellipsis-more"></ion-icon>
           </ion-button>
       </ion-buttons>
-  </ion-navbar>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content fullscreen="true" class="phone-page">
