--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,11 +46,11 @@
 	            <ion-icon name="wifi" slot="start"></ion-icon>
 	            <ion-label>Netcast</ion-label>
 	        </ion-item>
-	        <ion-item button >
+	        <ion-item button routerLink="/phone">
 	            <ion-icon name="call" slot="start"></ion-icon>
 	            <ion-label>Phone</ion-label>
 	        </ion-item>
-	        <ion-item button *ngIf="isMember">
+	        <ion-item button *ngIf="isMember" routerLink="/meeting-dashboard">
 	            <ion-icon name="people" slot="start"></ion-icon>
 	            <ion-label>Meetings</ion-label>
 	        </ion-item>
