--- a/src/app/components/meeting-details/meeting-details.component.html
+++ b/src/app/components/meeting-details/meeting-details.component.html
@@ -1,14 +1,14 @@
 <ion-header>
-    <ion-navbar>
+    <ion-toolbar>
         <ion-title>Meeting Details</ion-title>
-        <ion-buttons end>
-            <button (click)="close()" ion-button icon-only>
+        <ion-buttons slot="end">
+            <ion-button (click)="close()">
                 <ion-icon name="close-circle"></ion-icon>
-            </button>
+            </ion-button>
         </ion-buttons>
-    </ion-navbar>
+    </ion-toolbar>
 </ion-header>
-<ion-content padding>
+<ion-content class="ion-padding">
     <ion-grid>
         <ion-row>
             <ion-col>
@@ -28,7 +28,7 @@
                     <strong>Attendees:</strong>
                     <ion-list>
                         <ion-item *ngFor="let attendee of attendees">
-                            <meeting-attendee [meetingAttendee]="attendee"></meeting-attendee>
+                            <app-meeting-attendee [meetingAttendee]="attendee"></app-meeting-attendee>
                         </ion-item>
                     </ion-list>
                 </ng-container>
@@ -37,7 +37,7 @@
         </ion-row>
         <ion-row>
             <ion-col class="text-center">
-                <button ion-button (click)="close()">Close</button>
+                <ion-button (click)="close()">Close</ion-button>
             </ion-col>
         </ion-row>
     </ion-grid>
