--- a/src/app/pages/error/error.page.html
+++ b/src/app/pages/error/error.page.html
@@ -1,5 +1,5 @@
 <ion-content fullscreen="true" class="error404-page">
-  <ion-grid>
+  <ion-grid style="margin-top: 45px;">
       <ion-row>
           <ion-col><img id="logo" src="assets/lnv_logo.png"></ion-col>
       </ion-row>
