--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-          <ion-menu-button auto-hide="true" color="primary"></ion-menu-button>
+          <ion-menu-button color="primary" auto-hide="true" menu="main"></ion-menu-button>
         </ion-buttons>
         <ion-title>LOG IN</ion-title>
       </ion-toolbar>
