--- a/src/app/pages/phone/phone.page.html
+++ b/src/app/pages/phone/phone.page.html
@@ -8,7 +8,7 @@
       </ion-title>
       <ion-buttons slot="end">
           <ion-button (click)="openActionSheet()">
-              <ion-icon name="ellipsis-more"></ion-icon>
+              <ion-icon name="ellipsis-vertical"></ion-icon>
           </ion-button>
       </ion-buttons>
   </ion-toolbar>
@@ -83,16 +83,16 @@ boxes will show when its not -->
   </div>
 </div>
 <div class="btn-sms-container">
-  <ion-button *ngIf="isChatExpanded" class="btn-sms" (click)="collapseChat()">
+  <ion-button *ngIf="isChatExpanded" (click)="collapseChat()">
     <ion-icon name="contract"></ion-icon>
   </ion-button>
-  <ion-button *ngIf="isChatExpanded" class="btn-sms" (click)='saveMessages()'>
+  <ion-button *ngIf="isChatExpanded" (click)='saveMessages()'>
     <ion-icon name="mail"></ion-icon>
   </ion-button>
-  <ion-button *ngIf="isChatExpanded" class="btn-sms" (click)='openGroupSmsInterface()'>
+  <ion-button *ngIf="isChatExpanded" (click)='openGroupSmsInterface()'>
     <ion-icon name="chatbubbles"></ion-icon>
   </ion-button>
-  <ion-button *ngIf="isChatExpanded" class="btn-sms" (click)='openPrivateSmsInterface()'>
+  <ion-button *ngIf="isChatExpanded" (click)='openPrivateSmsInterface()'>
     <ion-icon name="text"></ion-icon>
   </ion-button>
 </div>
