--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,74 +1,74 @@
 <ion-app>
-	<ion-menu side="start" (ionOpen)="sliderMenuOpened()" (ionClose)="sliderMenuClosed()" contentId="main-content">
-	<ion-header>
-		<ion-toolbar>
-			<ion-title>
-		        <img src="assets/lnv_logo_blue.png" />
-		    </ion-title>
-		</ion-toolbar>
-	</ion-header>
-	<ion-content class="ion-padding">
-	    <ion-list>
-	        <ion-item>
-	            <ion-avatar slot="end">
-	                <img *ngIf="imgSrc" [src]="imgSrc" />
-	            </ion-avatar>
-	                
-	            <h2 *ngIf="userName">{{userName}}</h2>
-	            <p *ngIf="email">{{email}}</p>
-	        </ion-item>
+	<ion-menu side="start" menuId="main" contentId="main-content" type="push">
+		<ion-header>
+			<ion-toolbar>
+				<ion-title>
+					<img src="assets/lnv_logo_blue.png" />
+				</ion-title>
+			</ion-toolbar>
+		</ion-header>
+		<ion-content class="ion-padding">
+			<ion-list>
+				<ion-item>
+					<ion-avatar slot="end">
+						<img *ngIf="imgSrc" [src]="imgSrc" />
+					</ion-avatar>
+						
+					<h2 *ngIf="userName">{{userName}}</h2>
+					<p *ngIf="email">{{email}}</p>
+				</ion-item>
 
-	        <ion-item button routerLink="/home" routerDirection="forward">
-	            <ion-icon name="home" slot="start"></ion-icon>
-	            <ion-label>Home</ion-label>
-	        </ion-item>
-	        <ion-item button routerLink="/account" *ngIf="isMember" >
-	            <ion-icon name="person" slot="start"></ion-icon>
-	            <ion-label>Account</ion-label>
-	        </ion-item>
-	        <ion-item button routerLink="/block-list" *ngIf="isMember" >
-	            <ion-icon name="remove-circle" slot="start"></ion-icon>
-	            <ion-label>Blocked List</ion-label>
-	        </ion-item>
-	        <ion-item button routerLink="/contacts" *ngIf="isMember" >
-	            <ion-icon name="book" slot="start"></ion-icon>
-	            <ion-label>Contacts</ion-label>
-	        </ion-item>
-	        <ion-item button routerLink="/register" *ngIf="!isMember" >
-	            <ion-icon name="person-add" slot="start"></ion-icon>
-	            <ion-label>Register</ion-label>
-	        </ion-item>
-	        <ion-item button routerLink="/settings">
-	            <ion-icon name="settings" slot="start"></ion-icon>
-	            <ion-label>Settings</ion-label>
-	        </ion-item>
-	        <ion-item button routerLink="/netcast-dashboard">
-	            <ion-icon name="wifi" slot="start"></ion-icon>
-	            <ion-label>Netcast</ion-label>
-	        </ion-item>
-	        <ion-item button routerLink="/phone">
-	            <ion-icon name="call" slot="start"></ion-icon>
-	            <ion-label>Phone</ion-label>
-	        </ion-item>
-	        <ion-item button *ngIf="isMember" routerLink="/meeting-dashboard">
-	            <ion-icon name="people" slot="start"></ion-icon>
-	            <ion-label>Meetings</ion-label>
-	        </ion-item>
+				<ion-item button routerLink="/home" routerDirection="forward">
+					<ion-icon name="home" slot="start"></ion-icon>
+					<ion-label>Home</ion-label>
+				</ion-item>
+				<ion-item button routerLink="/account" *ngIf="isMember">
+					<ion-icon name="person" slot="start"></ion-icon>
+					<ion-label>Account</ion-label>
+				</ion-item>
+				<ion-item button routerLink="/block-list" *ngIf="isMember">
+					<ion-icon name="remove-circle" slot="start"></ion-icon>
+					<ion-label>Blocked List</ion-label>
+				</ion-item>
+				<ion-item button routerLink="/contacts" *ngIf="isMember">
+					<ion-icon name="book" slot="start"></ion-icon>
+					<ion-label>Contacts</ion-label>
+				</ion-item>
+				<ion-item button routerLink="/register" *ngIf="!isMember">
+					<ion-icon name="person-add" slot="start"></ion-icon>
+					<ion-label>Register</ion-label>
+				</ion-item>
+				<ion-item button routerLink="/settings">
+					<ion-icon name="settings" slot="start"></ion-icon>
+					<ion-label>Settings</ion-label>
+				</ion-item>
+				<ion-item button routerLink="/netcast-dashboard">
+					<ion-icon name="wifi" slot="start"></ion-icon>
+					<ion-label>Netcast</ion-label>
+				</ion-item>
+				<ion-item button routerLink="/phone">
+					<ion-icon name="call" slot="start"></ion-icon>
+					<ion-label>Phone</ion-label>
+				</ion-item>
+				<ion-item button *ngIf="isMember" routerLink="/meeting-dashboard">
+					<ion-icon name="people" slot="start"></ion-icon>
+					<ion-label>Meetings</ion-label>
+				</ion-item>
 
-	        <ion-item button routerLink="/company-search">
-	            <ion-icon name="search" slot="start"></ion-icon>
-	            <ion-label>Search Companies</ion-label>
-	        </ion-item>
-	        <ion-item button *ngIf="isLoggedIn">
-	            <ion-icon name="log-out" slot="start"></ion-icon>
-	            <ion-label>Log Out</ion-label>
-	        </ion-item>
-	        <ion-item button routerLink="/login" *ngIf="!isLoggedIn">
-	            <ion-icon name="log-in" slot="start"></ion-icon>
-	            <ion-label>Log In</ion-label>
-	        </ion-item>
-	    </ion-list>
-	</ion-content>
+				<ion-item button routerLink="/company-search">
+					<ion-icon name="search" slot="start"></ion-icon>
+					<ion-label>Search Companies</ion-label>
+				</ion-item>
+				<ion-item button *ngIf="isLoggedIn">
+					<ion-icon name="log-out" slot="start"></ion-icon>
+					<ion-label>Log Out</ion-label>
+				</ion-item>
+				<ion-item button routerLink="/login" *ngIf="!isLoggedIn">
+					<ion-icon name="log-in" slot="start"></ion-icon>
+					<ion-label>Log In</ion-label>
+				</ion-item>
+			</ion-list>
+		</ion-content>
 	</ion-menu>
 	<ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
