--- a/src/app/components/meeting-attendee/meeting-attendee.component.html
+++ b/src/app/components/meeting-attendee/meeting-attendee.component.html
@@ -1,12 +1,13 @@
  <!-- dummy component requires data from parent-->
 <ion-item>
-	<ion-avatar item-start>
+	<ion-avatar slot="start">
 		<img src="{{imgSrc}}" />
 	</ion-avatar>
-
-	<h3 matLine>
-		{{name}}
-	</h3>
-	<p>{{email}}</p>
-	<p>Status: {{rsvp}}</p>
+	<ion-label>
+		<h3 matLine>
+			{{name}}
+		</h3>
+		<p>{{email}}</p>
+		<p>Status: {{rsvp}}</p>
+	</ion-label>
 </ion-item>
