--- a/src/app/components/phone-line-invitation-modal/phone-line-invitation-modal.component.html
+++ b/src/app/components/phone-line-invitation-modal/phone-line-invitation-modal.component.html
@@ -9,7 +9,7 @@
     <p class="email">
         {{email}}
     </p>
-    <button ion-button color="danger" (click)="stopCalling()">
+    <ion-button color="danger" (click)="stopCalling()">
             <ion-icon id="hangup" name="call"></ion-icon>
-    </button>
+    </ion-button>
 </div>
